Ensure the hamburger icon is visible even on a white background

--- a/app/themes/default/main.css
+++ b/app/themes/default/main.css
@@ -47,6 +47,7 @@ a {
   z-index: 1;
   float: right;
   color: white;
+  text-shadow: 0 0 2px black;
 }
 
 #menu-hamburger::before {
